# cpp-config

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.zed/: debug.json  generate_cpp_stubs.py  settings.json  tasks.json
src/: main.cpp
